--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
                         <li>C</li>
                         <li>C++</li>
                         <li>Python</li>
+                        <li>Web Development</li>
+                        <li>App Development</li>
                         <li>Database: MYSQL</li>
                         <li>Java</li>
                         <li>Javascript</li>
