--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>CV</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <script src="https://kit.fontawesome.com/edda25d231.js" crossorigin="anonymous"></script>
+    <style>
+        @media screen and (max-width:576px) {
+            .social{
+                display: flex;
+                flex-direction: column;
+            }
+        }
+    </style>
 </head>
 <body class="container">
     <div class="container mb-5 mt-5">
@@ -15,7 +23,7 @@
                 <h1>Ahsan Mahmud Ashik</h1>
                 <h3>Undergraduate Student || Competitive Programmer</h3>
                 <h4>Jashore University of Science and Technology</h4>
-                <div class="d-flex gap-5">
+                <div class="d-flex justify-content-between social">
                     <div class="d-flex gap-2">
                         <i class="fa-regular fa-envelope"></i>
                         <h6>ashanmahmudashik@gmail.com</h6>
