--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-4 d-flex justify-content-end">
+            <div class="col-12 col-md-4 d-flex justify-content-lg-end justify-content-center">
                 <img src="ashik.jpg" alt="" class="w-50">
             </div>
         </div>
