--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
                 flex-direction: column;
             }
         }
+        .just-img{
+            width: 20px;
+            height: 25px;
+        }
     </style>
 </head>
 <body class="container">
@@ -22,7 +26,11 @@
             <div class="col-12 col-md-8">
                 <h1>Ahsan Mahmud Ashik</h1>
                 <h3>Undergraduate Student || Competitive Programmer</h3>
-                <h4>Jashore University of Science and Technology</h4>
+                <h3>MERN Stack Developer</h3><br>
+                <div class="d-flex gap-2">
+                    <img src="jsut-removebg-preview.png" alt="" class="just-img">
+                    <h4>Jashore University of Science and Technology</h4>
+                </div>
                 <div class="d-flex justify-content-between social">
                     <div class="d-flex gap-2">
                         <i class="fa-regular fa-envelope"></i>
@@ -49,7 +57,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-lg-end justify-content-center">
-                <img src="ashik.jpg" alt="" class="w-50">
+                <img src="ashik-removebg-preview.png" alt="" class="w-75 border border-primary-subtle rounded-4 bg-secondary-subtle">
             </div>
         </div>
     </div>
@@ -196,7 +204,7 @@
                         <li>CODEFORCES
                             <ul style="list-style: none;">
                                 <li>User Id: <a href="https://codeforces.com/profile/ashik1998">ashik1998</a></li>
-                                <li>Solving : 381 problems</li>
+                                <li>Solving : 391 problems</li>
                             </ul>
                         </li>
                         <li>CODECHEF
