--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <h2>Education</h2>
                     <hr class="border border-3 border-success">
                     <div class="mb-5">
-                        <h5>Bachelor of Science in Computer Science and Engineering</h5>
+                        <h5>BSc in CSE at Jashore University of Science and Technology</h5>
                         <div class="d-flex justify-content-between">
                             <div class="d-flex gap-2">
                                 <i class="fa-solid fa-calendar-days fs-4"></i>
